syntax = "proto3";

package sample;
option go_package = "github.com/hideyoshidan/grpc/server";

// interface
service Sample {
    // rpc function arg is for request, return is response
    rpc Sample (SampleRequest) returns (SampleResponse) {}
}

// Request body
message SampleRequest {
    string requestParam = 1;
}

// Response body
message SampleResponse {
    string responseMsg = 1;
}